--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -40,7 +40,12 @@
     <Compile Include="..\Belletrix.Core\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="ActivityLogPersonService.cs" />
     <Compile Include="ActivityLogService.cs" />
+    <Compile Include="ActivityService.cs" />
+    <Compile Include="IActivityLogPersonService.cs" />
+    <Compile Include="IActivityLogService.cs" />
+    <Compile Include="IActivityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
