Add publish profile for Winhost

--- a/Belletrix/Belletrix.csproj
+++ b/Belletrix/Belletrix.csproj
@@ -221,6 +221,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <None Include="Properties\PublishProfiles\belletrix.org - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\Belletrix.js" />
     <Content Include="Scripts\Belletrix.Promo.js" />
