Winhost requires full trust

--- a/Belletrix/Web.config
+++ b/Belletrix/Web.config
@@ -35,6 +35,8 @@
       <forms loginUrl="~/User/Login" />
     </authentication>
 
+    <trust level="Full" />
+
     <customErrors mode="Off" />
 
     <sessionState timeout="240" />
