Stop any PHP requests in their tracks quickly

--- a/Belletrix/Web.config
+++ b/Belletrix/Web.config
@@ -73,7 +73,19 @@
 
     <handlers>
       <add name="Robots" path="robots.txt" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+
+    <security>
+      <requestFiltering>
+        <fileExtensions allowUnlisted="true">
+          <add fileExtension=".php" allowed="false" />
+        </fileExtensions>
+      </requestFiltering>
+    </security>
   </system.webServer>
 
   <runtime>
