HTTPS for the win!

--- a/Belletrix/Web.config
+++ b/Belletrix/Web.config
@@ -35,6 +35,8 @@
       <forms loginUrl="~/User/Login" />
     </authentication>
 
+    <httpCookies httpOnlyCookies="true" />
+
     <trust level="Full" />
 
     <customErrors mode="Off" />
@@ -86,6 +88,11 @@
         </fileExtensions>
       </requestFiltering>
     </security>
+
+    <httpProtocol>
+      <customHeaders>
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 
   <runtime>
