--- a/Belletrix/Web.Release.config
+++ b/Belletrix/Web.Release.config
@@ -28,6 +28,13 @@
 
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+
+    <authentication mode="Forms">
+      <forms loginUrl="~/User/Login" requireSSL="true" xdt:Transform="Replace" />
+    </authentication>
+
+    <httpCookies httpOnlyCookies="true" requireSSL="true" lockItem="true" xdt:Transform="Replace" />
+
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your Web.config file.
@@ -40,4 +47,12 @@
       </customErrors>
     -->
   </system.web>
+
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Strict-Transport-Security" value="max-age=16070400" xdt:Transform="Insert" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
 </configuration>
