--- a/src/Belletrix/Belletrix.csproj
+++ b/src/Belletrix/Belletrix.csproj
@@ -45,6 +45,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="DropDownList_Optgroup">
       <HintPath>..\packages\DropDownList.Optgroup.MVC.1.0.0\lib\net40\DropDownList_Optgroup.dll</HintPath>
     </Reference>
@@ -69,6 +73,10 @@
     <Reference Include="Npgsql, Version=2.2.5.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Npgsql.2.2.5\lib\net45\Npgsql.dll</HintPath>
+    </Reference>
+    <Reference Include="StackExchange.Exceptional, Version=1.0.0.122, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StackExchange.Exceptional.1.0.122\lib\StackExchange.Exceptional.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -332,10 +340,6 @@
     <ProjectReference Include="..\StackExchange.Exceptional.PostgreSql\StackExchange.Exceptional.PostgreSQL.csproj">
       <Project>{8dc4bf04-721a-4da4-aeca-f8fb8cf64625}</Project>
       <Name>StackExchange.Exceptional.PostgreSQL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StackExchange.Exceptional\StackExchange.Exceptional.csproj">
-      <Project>{da84a7a0-8042-4b2b-a000-3579dd419d2a}</Project>
-      <Name>StackExchange.Exceptional</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
