--- a/src/Belletrix/packages.config
+++ b/src/Belletrix/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="Dapper" version="1.42" targetFramework="net45" />
   <package id="DropDownList.Optgroup.MVC" version="1.0.0" targetFramework="net45" />
   <package id="font-awesome" version="4.3.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
@@ -18,6 +19,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Npgsql" version="2.2.5" targetFramework="net45" />
+  <package id="StackExchange.Exceptional" version="1.0.122" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
