--- a/src/StackExchange.Exceptional.PostgreSQL/StackExchange.Exceptional.PostgreSQL.csproj
+++ b/src/StackExchange.Exceptional.PostgreSQL/StackExchange.Exceptional.PostgreSQL.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Mono.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Npgsql.2.2.5\lib\net45\Mono.Security.dll</HintPath>
@@ -39,6 +43,10 @@
     <Reference Include="Npgsql, Version=2.2.5.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Npgsql.2.2.5\lib\net45\Npgsql.dll</HintPath>
+    </Reference>
+    <Reference Include="StackExchange.Exceptional, Version=1.0.0.122, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\StackExchange.Exceptional.1.0.122\lib\StackExchange.Exceptional.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -55,10 +63,6 @@
     <ProjectReference Include="..\Belletrix.Core\Belletrix.Core.csproj">
       <Project>{a0f343d6-b9b3-42b7-8c1d-2826a16280cb}</Project>
       <Name>AbroadAdvisor.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StackExchange.Exceptional\StackExchange.Exceptional.csproj">
-      <Project>{da84a7a0-8042-4b2b-a000-3579dd419d2a}</Project>
-      <Name>StackExchange.Exceptional</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
