Maintain changes to participant list

--- a/src/Belletrix.Entity/Belletrix.Entity.csproj
+++ b/src/Belletrix.Entity/Belletrix.Entity.csproj
@@ -39,6 +39,7 @@
     </Compile>
     <Compile Include="Enum\ActivityLogParticipantTypes.cs" />
     <Compile Include="Enum\ActivityLogTypes.cs" />
+    <Compile Include="Model\ActivityLogSessionModel.cs" />
     <Compile Include="ViewModel\ActivityLogCreateViewModel.cs" />
     <Compile Include="Model\ActivityLogModel.cs" />
     <Compile Include="Model\ActivityLogParticipantModel.cs" />
