Start of conversion to MSSQL

--- a/src/Belletrix/Web.config
+++ b/src/Belletrix/Web.config
@@ -15,11 +15,11 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Production" connectionString="Server=localhost; Port=5432; User Id=neoanime_belletrix-prod; Password=yT0cvz7rLMseiW6AKz; Database=neoanime_belletrix; SSL=False; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;" />
+    <add name="Production" connectionString="Data Source=localhost;Initial Catalog=belletrix;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <Exceptional applicationName="Belletrix">
-    <ErrorStore type="PostgreSQL" connectionStringName="Production" />
+    <ErrorStore type="SQL" connectionStringName="Production" />
   </Exceptional>
 
   <system.net>
