--- a/src/Belletrix/Web.Release.config
+++ b/src/Belletrix/Web.Release.config
@@ -17,7 +17,7 @@
 
   <connectionStrings>
     <add name="Production"
-         connectionString="Server=69.89.31.250; Port=5432; User Id=neoanime_belletrix-prod; Password=yT0cvz7rLMseiW6AKz; Database=neoanime_belletrix; SSL=True; Sslmode=Require; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;"
+         connectionString="Data Source=tcp:s11.winhost.com;Initial Catalog=DB_92352_belletrix;User ID=DB_92352_belletrix_user;Password=Me0lK@rml^cVw1%vClpz;Integrated Security=False;Encrypt=True"
          xdt:Transform="Replace" xdt:Locator="Match(name)" />
   </connectionStrings>
 
