--- a/src/Belletrix/Web.config
+++ b/src/Belletrix/Web.config
@@ -69,6 +69,8 @@
     <staticContent>
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/x-font-woff" />
     </staticContent>
 
     <validation validateIntegratedModeConfiguration="false" />
