Add Visual Studio 2015 local IIS config

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+applicationhost.config
 
 # Backup & report files from converting an old project file to a newer
 # Visual Studio version. Backup files are not needed, because we have git ;-)
