Add several popular URLs attackers have used

--- a/src/Belletrix/Web.config
+++ b/src/Belletrix/Web.config
@@ -86,8 +86,14 @@
     <security>
       <requestFiltering>
         <fileExtensions allowUnlisted="true">
+          <!-- Deny any requests for PHP scripts. -->
           <add fileExtension=".php" allowed="false" />
         </fileExtensions>
+        <hiddenSegments>
+          <!-- Collection of random URLs from bots and attackers. -->
+          <add segment="cgi-bin" />
+          <add segment="rom-0" />
+        </hiddenSegments>
       </requestFiltering>
     </security>
 
