--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -43,7 +43,9 @@
     </Compile>
     <Compile Include="ActivityService.cs" />
     <Compile Include="IActivityService.cs" />
+    <Compile Include="IStudentNoteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentNoteService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Belletrix.Core\Belletrix.Core.csproj">
