--- a/src/Belletrix.DAL/Belletrix.DAL.csproj
+++ b/src/Belletrix.DAL/Belletrix.DAL.csproj
@@ -47,9 +47,11 @@
     <Compile Include="IActivityLogRepository.cs" />
     <Compile Include="IStudentNoteRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Belletrix.Core\Belletrix.Core.csproj">
