--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -44,8 +44,10 @@
     <Compile Include="ActivityService.cs" />
     <Compile Include="IActivityService.cs" />
     <Compile Include="IStudentNoteService.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Belletrix.Core\Belletrix.Core.csproj">
