--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -44,9 +44,11 @@
     <Compile Include="ActivityService.cs" />
     <Compile Include="IActivityService.cs" />
     <Compile Include="IStudentNoteService.cs" />
+    <Compile Include="IStudentService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteService.cs" />
+    <Compile Include="StudentService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
