--- a/src/Belletrix.Entity/Belletrix.Entity.csproj
+++ b/src/Belletrix.Entity/Belletrix.Entity.csproj
@@ -48,8 +48,10 @@
     <Compile Include="Model\NoteModel.cs" />
     <Compile Include="Model\ProgramModel.cs" />
     <Compile Include="Model\ProgramTypeModel.cs" />
+    <Compile Include="Model\PromoModel.cs" />
     <Compile Include="Model\StudentClassificationModel.cs" />
     <Compile Include="Model\StudentModels.cs" />
+    <Compile Include="Model\StudentPromoLog.cs" />
     <Compile Include="Model\StudentStudyAbroadWishlistModel.cs" />
     <Compile Include="Model\UserModel.cs" />
     <Compile Include="ViewModel\ActivityLogCreateViewModel.cs" />
