--- a/src/Belletrix.DAL/Belletrix.DAL.csproj
+++ b/src/Belletrix.DAL/Belletrix.DAL.csproj
@@ -45,10 +45,12 @@
     <Compile Include="ActivityLogRepository.cs" />
     <Compile Include="IActivityLogPersonRepository.cs" />
     <Compile Include="IActivityLogRepository.cs" />
+    <Compile Include="IPromoRepository.cs" />
     <Compile Include="IStudentNoteRepository.cs" />
     <Compile Include="IStudentRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="IUserRepository.cs" />
+    <Compile Include="PromoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteRepository.cs" />
     <Compile Include="StudentRepository.cs" />
