--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -43,9 +43,11 @@
     </Compile>
     <Compile Include="ActivityService.cs" />
     <Compile Include="IActivityService.cs" />
+    <Compile Include="IPromoService.cs" />
     <Compile Include="IStudentNoteService.cs" />
     <Compile Include="IStudentService.cs" />
     <Compile Include="IUserService.cs" />
+    <Compile Include="PromoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteService.cs" />
     <Compile Include="StudentService.cs" />
