Progress migrating things

--- a/src/Belletrix.Entity/Belletrix.Entity.csproj
+++ b/src/Belletrix.Entity/Belletrix.Entity.csproj
@@ -39,9 +39,11 @@
     </Compile>
     <Compile Include="Enum\ActivityLogParticipantTypes.cs" />
     <Compile Include="Enum\ActivityLogTypes.cs" />
+    <Compile Include="Enum\EventLogTypes.cs" />
     <Compile Include="Enum\StudentStudyAbroadPeriods.cs" />
     <Compile Include="Model\ActivityLogSessionModel.cs" />
     <Compile Include="Model\CountryModel.cs" />
+    <Compile Include="Model\EventLogModel.cs" />
     <Compile Include="Model\LanguageModel.cs" />
     <Compile Include="Model\MajorsModel.cs" />
     <Compile Include="Model\MinorsModel.cs" />
@@ -53,6 +55,7 @@
     <Compile Include="Model\StudentModels.cs" />
     <Compile Include="Model\StudentPromoLog.cs" />
     <Compile Include="Model\StudentStudyAbroadWishlistModel.cs" />
+    <Compile Include="Model\StudyAbroadModel.cs" />
     <Compile Include="Model\UserModel.cs" />
     <Compile Include="ViewModel\ActivityLogCreateViewModel.cs" />
     <Compile Include="Model\ActivityLogModel.cs" />
