--- a/src/Belletrix.DAL/Belletrix.DAL.csproj
+++ b/src/Belletrix.DAL/Belletrix.DAL.csproj
@@ -43,17 +43,25 @@
     </Compile>
     <Compile Include="ActivityLogPersonRepository.cs" />
     <Compile Include="ActivityLogRepository.cs" />
+    <Compile Include="EventLogRepository.cs" />
     <Compile Include="IActivityLogPersonRepository.cs" />
     <Compile Include="IActivityLogRepository.cs" />
+    <Compile Include="IEventLogRepository.cs" />
+    <Compile Include="IPingRepository.cs" />
     <Compile Include="IPromoRepository.cs" />
     <Compile Include="IStudentNoteRepository.cs" />
+    <Compile Include="IStudentPromoRepository.cs" />
     <Compile Include="IStudentRepository.cs" />
+    <Compile Include="IStudyAbroadRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="IUserRepository.cs" />
+    <Compile Include="PingRepository.cs" />
     <Compile Include="PromoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteRepository.cs" />
+    <Compile Include="StudentPromoRepository.cs" />
     <Compile Include="StudentRepository.cs" />
+    <Compile Include="StudyAbroadRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
