--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -42,11 +42,15 @@
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="ActivityService.cs" />
+    <Compile Include="EventLogService.cs" />
     <Compile Include="IActivityService.cs" />
+    <Compile Include="IEventLogService.cs" />
+    <Compile Include="IPingService.cs" />
     <Compile Include="IPromoService.cs" />
     <Compile Include="IStudentNoteService.cs" />
     <Compile Include="IStudentService.cs" />
     <Compile Include="IUserService.cs" />
+    <Compile Include="PingService.cs" />
     <Compile Include="PromoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteService.cs" />
