--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -49,12 +49,14 @@
     <Compile Include="IPromoService.cs" />
     <Compile Include="IStudentNoteService.cs" />
     <Compile Include="IStudentService.cs" />
+    <Compile Include="IStudyAbroadService.cs" />
     <Compile Include="IUserService.cs" />
     <Compile Include="PingService.cs" />
     <Compile Include="PromoService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentNoteService.cs" />
     <Compile Include="StudentService.cs" />
+    <Compile Include="StudyAbroadService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
