Progress towards n-tier, need to fix different student models next

--- a/src/Belletrix/Belletrix.csproj
+++ b/src/Belletrix/Belletrix.csproj
@@ -166,9 +166,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\BelletrixDependencyResolver.cs" />
-    <Compile Include="Models\StudentBaseModel.cs" />
-    <Compile Include="Models\MatriculationModel.cs" />
-    <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -281,6 +278,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
