--- a/src/Belletrix/packages.config
+++ b/src/Belletrix/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Dapper" version="1.42" targetFramework="net45" />
   <package id="DropDownList.Optgroup.MVC" version="1.0.0" targetFramework="net45" />
   <package id="font-awesome" version="4.4.0" targetFramework="net45" />
@@ -19,6 +20,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="StackExchange.Exceptional" version="1.0.122" targetFramework="net45" />
-  <package id="Unity" version="4.0.0" targetFramework="net45" />
+  <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
