--- a/src/Belletrix/packages.config
+++ b/src/Belletrix/packages.config
@@ -21,5 +21,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="StackExchange.Exceptional" version="1.0.122" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
+  <package id="Unity.Mvc" version="4.0.1" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
