--- a/src/Belletrix.Web/Web.Release.config
+++ b/src/Belletrix.Web/Web.Release.config
@@ -17,7 +17,7 @@
 
   <connectionStrings>
     <add name="Production"
-         connectionString="Data Source=tcp:s11.winhost.com;Initial Catalog=DB_92352_belletrix;User ID=DB_92352_belletrix_user;Password=Me0lK@rml^cVw1%vClpz;Integrated Security=False;Encrypt=True"
+         connectionString="Data Source=tcp:s11.winhost.com;Initial Catalog=DB_92352_belletrix;User ID=DB_92352_belletrix_user;Password=Me0lK@rml^cVw1%vClpz;Integrated Security=False;Encrypt=True;MultipleActiveResultSets=True;"
          xdt:Transform="Replace" xdt:Locator="Match(name)" />
   </connectionStrings>
 
