--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -15,7 +15,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Production" connectionString="Data Source=localhost;Initial Catalog=belletrix;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="Production" connectionString="Data Source=localhost;Initial Catalog=belletrix;Integrated Security=SSPI;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <Exceptional applicationName="Belletrix">
