Add empty sitemap.xml to satisfy crawlers

--- a/src/Belletrix.Web/Belletrix.Web.csproj
+++ b/src/Belletrix.Web/Belletrix.Web.csproj
@@ -284,6 +284,7 @@
     <Content Include="Views\ActivityLog\Edit.cshtml" />
     <Content Include="Views\ActivityLog\EditFieldsPartial.cshtml" />
     <Content Include="Views\ActivityLogPerson\AddPerson.cshtml" />
+    <Content Include="Views\Home\Sitemap.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
