More URLs we should outright deny

--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -86,13 +86,16 @@
     <security>
       <requestFiltering>
         <fileExtensions allowUnlisted="true">
-          <!-- Deny any requests for PHP scripts. -->
+          <add fileExtension=".bs" allowed="false" />
           <add fileExtension=".php" allowed="false" />
         </fileExtensions>
         <hiddenSegments>
           <!-- Collection of random URLs from bots and attackers. -->
+          <add segment="CFIDE" />
           <add segment="cgi-bin" />
+          <add segment="muieblackcat" />
           <add segment="rom-0" />
+          <add segment="wp-login" />
         </hiddenSegments>
       </requestFiltering>
     </security>
