--- a/src/Belletrix.Web.Tests/Belletrix.Web.Tests.csproj
+++ b/src/Belletrix.Web.Tests/Belletrix.Web.Tests.csproj
@@ -73,8 +73,9 @@
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LoginPageTests.cs" />
+    <Compile Include="LoginTests.cs" />
     <Compile Include="RootWebDriver.cs" />
+    <Compile Include="ActivityLogTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
