--- a/src/Belletrix.Entity/Belletrix.Entity.csproj
+++ b/src/Belletrix.Entity/Belletrix.Entity.csproj
@@ -57,13 +57,11 @@
     <Compile Include="Model\StudentStudyAbroadWishlistModel.cs" />
     <Compile Include="Model\StudyAbroadModel.cs" />
     <Compile Include="Model\UserModel.cs" />
-    <Compile Include="ViewModel\ActivityLogCreateViewModel.cs" />
     <Compile Include="Model\ActivityLogModel.cs" />
     <Compile Include="Model\ActivityLogParticipantModel.cs" />
     <Compile Include="Model\ActivityLogPersonModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\ActivityLogEditViewModel.cs" />
-    <Compile Include="ViewModel\ActivityLogPersonCreateViewModel.cs" />
+    <Compile Include="ViewModel\ActivityLogViewModels.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\StudentSearchViewModel.cs" />
   </ItemGroup>
