Add student notes tests

--- a/src/Belletrix.Web.Tests/Belletrix.Web.Tests.csproj
+++ b/src/Belletrix.Web.Tests/Belletrix.Web.Tests.csproj
@@ -76,6 +76,8 @@
     <Compile Include="LoginTests.cs" />
     <Compile Include="RootWebDriver.cs" />
     <Compile Include="ActivityLogTests.cs" />
+    <Compile Include="Student\StudentNoteTests.cs" />
+    <Compile Include="WebDriverExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
