Use a shared assembly file for all common project info

--- a/src/Belletrix.Domain.Tests/Belletrix.Domain.Tests.csproj
+++ b/src/Belletrix.Domain.Tests/Belletrix.Domain.Tests.csproj
@@ -50,8 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="..\Belletrix.Core\Properties\VersionInfo.cs">
-      <Link>Properties\VersionInfo.cs</Link>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ActivityLog\ModelConversions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
