--- a/src/Belletrix.Domain/Belletrix.Domain.csproj
+++ b/src/Belletrix.Domain/Belletrix.Domain.csproj
@@ -34,8 +34,8 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Belletrix.Core\Properties\VersionInfo.cs">
-      <Link>Properties\VersionInfo.cs</Link>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ActivityService.cs" />
     <Compile Include="EventLogService.cs" />
