--- a/src/Belletrix.Web.Tests/Belletrix.Web.Tests.csproj
+++ b/src/Belletrix.Web.Tests/Belletrix.Web.Tests.csproj
@@ -69,8 +69,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="..\Belletrix.Core\Properties\VersionInfo.cs">
-      <Link>Properties\VersionInfo.cs</Link>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LoginTests.cs" />
