--- a/src/Belletrix.Core/Belletrix.Core.csproj
+++ b/src/Belletrix.Core/Belletrix.Core.csproj
@@ -51,6 +51,9 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Analytics.cs" />
     <Compile Include="ApplicationCache.cs" />
     <Compile Include="Connections.cs" />
@@ -62,7 +65,6 @@
     <Compile Include="IDebuggingService.cs" />
     <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
