--- a/src/Belletrix.DAL/Belletrix.DAL.csproj
+++ b/src/Belletrix.DAL/Belletrix.DAL.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Belletrix.Core\Properties\VersionInfo.cs">
-      <Link>Properties\VersionInfo.cs</Link>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ActivityLogPersonRepository.cs" />
     <Compile Include="ActivityLogRepository.cs" />
