--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -24,8 +24,8 @@
 
   <system.net>
     <mailSettings>
-      <smtp deliveryMethod="Network" from="nobody@andreinicholson.com">
-        <network host="smtp.mandrillapp.com" port="587" userName="mandrill@andreinicholson.com" password="qwLoJKuvtJfrSnNSK_wz-A" enableSsl="true" />
+      <smtp deliveryMethod="Network" from="contact@andreinicholson.com">
+        <network host="smtp.sendgrid.net" port="587" userName="tetsuo13" password="5dXAbfcwlerjYdPAW2oA" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
