--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -32,7 +32,7 @@
 
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="~/User/Login" />
+      <forms loginUrl="~/Login/index" />
     </authentication>
 
     <httpCookies httpOnlyCookies="true" />
