Add more request filtering to prevent potential attacks

--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -87,14 +87,20 @@
       <requestFiltering>
         <fileExtensions allowUnlisted="true">
           <add fileExtension=".bs" allowed="false" />
+          <add fileExtension=".cgi" allowed="false" />
           <add fileExtension=".php" allowed="false" />
         </fileExtensions>
         <hiddenSegments>
           <!-- Collection of random URLs from bots and attackers. -->
+          <add segment="administrator" />
           <add segment="CFIDE" />
           <add segment="cgi-bin" />
           <add segment="muieblackcat" />
+          <add segment="phpMyAdmin" />
           <add segment="rom-0" />
+          <add segment="web-console" />
+          <add segment="wordpress" />
+          <add segment="wp-content" />
           <add segment="wp-login" />
         </hiddenSegments>
       </requestFiltering>
