--- a/src/Belletrix.Core/packages.config
+++ b/src/Belletrix.Core/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MiniProfiler" version="3.2.0.157" targetFramework="net451" />
   <package id="Piwik.Tracker" version="2.16.0.0" targetFramework="net451" />
 </packages>
