--- a/src/Belletrix.DAL/packages.config
+++ b/src/Belletrix.DAL/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="MiniProfiler" version="3.2.0.157" targetFramework="net451" />
   <package id="StackExchange.Exceptional" version="1.0.122" targetFramework="net45" />
 </packages>
