--- a/src/Belletrix.Web/packages.config
+++ b/src/Belletrix.Web/packages.config
@@ -26,6 +26,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MiniProfiler" version="3.2.0.157" targetFramework="net451" />
+  <package id="MiniProfiler.MVC4" version="3.0.11" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="StackExchange.Exceptional" version="1.0.122" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
