Add unit tests to cover fix in 809f4c6e89eecd73bb25dbb2ac2c7792cc570a68

--- a/src/Belletrix.Core/Belletrix.Core.csproj
+++ b/src/Belletrix.Core/Belletrix.Core.csproj
@@ -74,6 +74,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Belletrix.Entity\Belletrix.Entity.csproj">
+      <Project>{8C8CC40A-AF9F-4C3C-BE73-501963C92281}</Project>
+      <Name>Belletrix.Entity</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
