Another popular target

--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -86,6 +86,7 @@
           <add segment="administrator" />
           <add segment="CFIDE" />
           <add segment="cgi-bin" />
+          <add segment="fckeditor.js" />
           <add segment="muieblackcat" />
           <add segment="phpMyAdmin" />
           <add segment="rom-0" />
