Block more extensions we don't use

--- a/src/Belletrix.Web/Web.config
+++ b/src/Belletrix.Web/Web.config
@@ -79,6 +79,8 @@
         <fileExtensions allowUnlisted="true">
           <add fileExtension=".bs" allowed="false" />
           <add fileExtension=".cgi" allowed="false" />
+          <add fileExtension=".htm" allowed="false" />
+          <add fileExtension=".html" allowed="false" />
           <add fileExtension=".php" allowed="false" />
         </fileExtensions>
         <hiddenSegments>
